POMOPLOT init5.0 Aggiunte le legende Effetto trasparenza Effetto bloom

--- a/prove.ipynb
+++ b/prove.ipynb
@@ -386,6 +386,47 @@
     "\n",
     "BottoniCallbacks.load_file()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.0 (SDL 2.28.4, Python 3.12.4)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pygame\n",
+    "\n",
+    "# Initialize pygame\n",
+    "pygame.init()\n",
+    "\n",
+    "# Create a base surface\n",
+    "width, height = 800, 600\n",
+    "base_surface = pygame.Surface((width, height))\n",
+    "\n",
+    "# Fill the base surface with a background color (optional)\n",
+    "base_surface.fill((255, 255, 255))  # White background\n",
+    "\n",
+    "# Create another surface to blit onto the base surface\n",
+    "overlay_surface = pygame.Surface((200, 200))\n",
+    "overlay_surface.fill((255, 0, 0))  # Red square\n",
+    "\n",
+    "# Blit the overlay surface onto the base surface\n",
+    "base_surface.blit(overlay_surface, (300, 200))\n",
+    "\n",
+    "# Save the resulting surface as a PNG file\n",
+    "pygame.image.save(base_surface, \"output_image.png\")\n",
+    "\n",
+    "# Quit pygame\n",
+    "pygame.quit()\n"
+   ]
   }
  ],
  "metadata": {
