POMOPLOT v1.3 Added scroll to the context menù Added new tool for reporting coordinates UI optimization Fixed some visual bugs

--- a/prove.ipynb
+++ b/prove.ipynb
@@ -467,6 +467,28 @@
     "opts.highlightColour = (0.8, 0.3, 0.3)  # RGB values\n",
     "Draw.MolToImage(mol, highlightAtoms=[0], options=opts)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Non sei Pippo\n"
+     ]
+    }
+   ],
+   "source": [
+    "variabile = \"alessio\"\n",
+    "\n",
+    "if variabile == \"pippo\":\n",
+    "    print(2 + 2)\n",
+    "else:\n",
+    "    print(\"Non sei Pippo\")"
+   ]
   }
  ],
  "metadata": {
