POMOPLOT v1.8 Added molecule metadata Added import via dragging Added lost focus on entry boxes

--- a/prove.ipynb
+++ b/prove.ipynb
@@ -589,6 +589,167 @@
     "\n",
     "print(numero)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'akjdf\\npskrngln\\n\\n\\nsojdnsol'\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = \"akjdf\\npskrngln\\n\\n\\nsojdnsol\"\n",
+    "\n",
+    "print(repr(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ciao-|-amore-|-mio-|-!\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [\"Ciao\", \"amore\", \"mio\", \"!\"]\n",
+    "\n",
+    "risultato = \"-|-\".join(lista)\n",
+    "\n",
+    "print(risultato)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "stringa = \"50.0\"\n",
+    "\n",
+    "print(int(float(stringa)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "giallo estate\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vestito:\n",
+    "    def __init__(self, colore, stagione):\n",
+    "        self.colore = colore\n",
+    "        self.stagione = stagione\n",
+    "\n",
+    "\n",
+    "gonna = Vestito(\"giallo\", \"estate\")\n",
+    "\n",
+    "\n",
+    "print(gonna.colore, gonna.stagione)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "È una gonna nera\n",
+      "È un capotto grigio\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Armadio:\n",
+    "    def __init__(self):\n",
+    "        self.gonne = []\n",
+    "        self.cappotti = []\n",
+    "\n",
+    "    def aggiungi_vestito(self, vestito):\n",
+    "        if type(vestito) == Gonna:\n",
+    "            print(f\"È una gonna {vestito.colore}\")\n",
+    "        if type(vestito) == Cappotto:\n",
+    "            print(f\"È un capotto {vestito.colore}\")\n",
+    "\n",
+    "\n",
+    "class Gonna:\n",
+    "    def __init__(self, colore):\n",
+    "        self.colore = colore\n",
+    "\n",
+    "    \n",
+    "class Cappotto:\n",
+    "    def __init__(self, colore):\n",
+    "        self.colore = colore \n",
+    "\n",
+    "\n",
+    "mio_armadio = Armadio()\n",
+    "gonna_nera = Gonna(\"nera\")\n",
+    "cappotto_clod = Cappotto(\"grigio\")\n",
+    "\n",
+    "mio_armadio.aggiungi_vestito(gonna_nera)\n",
+    "mio_armadio.aggiungi_vestito(cappotto_clod)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1000 2000 3000]\n",
+      " [ 100  200  300]\n",
+      " [  10   20   30]\n",
+      " [   1    2    3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.array([\n",
+    "    [1, 2, 3],\n",
+    "    [10, 20, 30],\n",
+    "    [100, 200, 300],\n",
+    "    [1000, 2000, 3000],\n",
+    "])\n",
+    "\n",
+    "x = x[::-1, :]\n",
+    "\n",
+    "print(x)"
+   ]
   }
  ],
  "metadata": {
