Feature update: - Improved the color picker

--- a/prove.ipynb
+++ b/prove.ipynb
@@ -1,162 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from math import ceil, floor\n",
-    "import numpy as np\n",
-    "\n",
-    "\n",
-    "def predicter(x):\n",
-    "\n",
-    "    def power_converter(value):\n",
-    "\n",
-    "        if value >= 0:\n",
-    "            return float(\"1\" + \"0\" * value)            \n",
-    "        else:\n",
-    "            return 1 / float(\"1\" + \"0\" * -value)            \n",
-    "\n",
-    "\n",
-    "    min_ticks = 3\n",
-    "    max_ticks = 10\n",
-    "    nice_values = [1, 2, 2.5, 5, 10]\n",
-    "    \n",
-    "    all_combinations = []\n",
-    "    power_per_tick = []\n",
-    "\n",
-    "    delta = x[-1] - x[0]    \n",
-    "\n",
-    "    for n_ticks in range(min_ticks, max_ticks + 1):\n",
-    "        \n",
-    "        spacing = abs(delta / n_ticks)\n",
-    "\n",
-    "        run = 1\n",
-    "        power = 0\n",
-    "\n",
-    "        while run:\n",
-    "            if spacing * power_converter(power) // nice_values[0] <= 1:\n",
-    "                power += 1\n",
-    "            elif spacing * power_converter(power) // nice_values[-1] >= 1:\n",
-    "                power -= 1\n",
-    "\n",
-    "            if spacing * power_converter(power) // nice_values[0] >= 1 and spacing * power_converter(power) // nice_values[-1] <= 1:\n",
-    "                run = 0\n",
-    "            \n",
-    "        \n",
-    "        all_combinations.append([abs(spacing * power_converter(power) - value) for value in nice_values])\n",
-    "        power_per_tick.append(power_converter(-power))\n",
-    "        \n",
-    "    best_from_tick = []\n",
-    "    for single_tick in all_combinations:\n",
-    "        best_from_tick.append([min(single_tick), single_tick.index(min(single_tick))])\n",
-    "\n",
-    "    minimo = np.inf\n",
-    "    indice_valore = 0\n",
-    "    indice_tick = 0\n",
-    "\n",
-    "    \n",
-    "    for index, contendente in enumerate(best_from_tick):\n",
-    "        \n",
-    "        if contendente[0] <= minimo:\n",
-    "            minimo = contendente[0]\n",
-    "            indice_valore = contendente[1]\n",
-    "            indice_tick = index\n",
-    "\n",
-    "\n",
-    "    new_start = round(x[0] / (nice_values[indice_valore] * power_per_tick[indice_tick])) * (nice_values[indice_valore] * power_per_tick[indice_tick])\n",
-    "    \n",
-    "    ris = [round(new_start + nice_values[indice_valore] * power_per_tick[indice_tick] * i, 3) for i in range(0, indice_tick + min_ticks + 1)]\n",
-    "        \n",
-    "    # decido se tenere l'ultimo elemento\n",
-    "    while abs(x[-1] - ris[-1]) > abs(x[-1] - ris[-2]):\n",
-    "        ris.pop()\n",
-    "\n",
-    "    print(ris)\n",
-    "    return ris\n",
-    "\n",
-    "\n",
-    "\n",
-    "x = [-0.0100452340500, 13.454873]\n",
-    "y = [0, 0]\n",
-    "\n",
-    "plt.plot(x, y)\n",
-    "plt.xlabel(\"Ciccione\")\n",
-    "plt.ylabel(\"Ciccione\")\n",
-    "\n",
-    "new_x = predicter(x)\n",
-    "\n",
-    "plt.scatter(new_x, [0 for _ in range(len(new_x))])\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "w, h = 200, 200 # resolution\n",
-    "mat = np.zeros((w, h, 3))\n",
-    "\n",
-    "def interpolation(value):\n",
-    "    # 100 -> 110 -> 010 -> 011 -> 001 -> 101 -> 100\n",
-    "    #  0  ->  1  ->  2  ->  3  ->  4  ->  5  ->  6\n",
-    "    normalization_factor = 1 / 6\n",
-    "    index = value // normalization_factor\n",
-    "    inner_interpolation = (value % normalization_factor) / (1/6)\n",
-    "\n",
-    "    def interpolate(x1, y1, z1, x2, y2, z2, value):\n",
-    "        \n",
-    "        if value == 0:\n",
-    "            x = x1\n",
-    "            y = y1\n",
-    "            z = z1\n",
-    "        else:\n",
-    "            x = x1 + (x2 - x1) * value\n",
-    "            y = y1 + (y2 - y1) * value\n",
-    "            z = z1 + (z2 - z1) * value\n",
-    "\n",
-    "        return np.array([x, y, z])\n",
-    "\n",
-    "    if index == 0:\n",
-    "        return interpolate(1, 0, 0, 1, 1, 0, inner_interpolation)\n",
-    "    elif index == 1:\n",
-    "        return interpolate(1, 1, 0, 0, 1, 0, inner_interpolation)\n",
-    "    elif index == 2:\n",
-    "        return interpolate(0, 1, 0, 0, 1, 1, inner_interpolation)\n",
-    "    elif index == 3:\n",
-    "        return interpolate(0, 1, 1, 0, 0, 1, inner_interpolation)\n",
-    "    elif index == 4:\n",
-    "        return interpolate(0, 0, 1, 1, 0, 1, inner_interpolation)\n",
-    "    elif index == 5:\n",
-    "        return interpolate(1, 0, 1, 1, 0, 0, inner_interpolation)\n",
-    "    elif index == 6:\n",
-    "        return np.array([1, 0, 0])\n",
-    "\n",
-    "for x in range(w):\n",
-    "    # controls Hue\n",
-    "    mat[:, x, :] = interpolation(x / w) \n",
-    "\n",
-    "for y in range(h):\n",
-    "    # controls Saturation\n",
-    "    mat[y, :, :] *= 1 - (y / w)\n",
-    "    mat[y, :, :] += (y / w)\n",
-    "\n",
-    "# controls Intensity\n",
-    "mat[:, :, :] *= 1\n",
-    "\n",
-    "plt.imshow(mat)\n",
-    "plt.show()"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
